--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Zoo",
             "request": "launch",
             "mainClass": "project.abomination.Zoo",
+            "projectName": "PPLFinalGRILL_da8e0e70"
+        },
+        {
+            "type": "java",
+            "name": "Zoo",
+            "request": "launch",
+            "mainClass": "project.abomination.Zoo",
             "projectName": "PPLFinalGRILL-1_43e8533"
         },
         {
